<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"

            android:layout_marginStart="15dp"
            android:layout_weight="5"
            android:gravity="start|center"
            android:text="@string/salam"
            android:textColor="@color/white"
            android:textSize="15dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_weight="5"
            android:gravity="start|center"
            android:text="@string/test_knowledge"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.7"
        android:layout_margin="0dp"
        android:background="@drawable/main_card_shape"

        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/main_card_shape">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:tabIndicatorColor="@color/app_bg_light"
                app:tabInlineLabel="true"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/app_bg_light"
                app:tabTextAppearance="@style/TabLayoutStyle"
                app:tabTextColor="@color/text_color"
                android:layout_alignParentBottom="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:id="@+id/quiz_category_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="10"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:gravity="start|center"
                        android:text="@string/quiz_categories"
                        android:textColor="@color/app_bg_light"
                        android:textSize="24dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/quiz_categories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="9"
                        tools:listitem="@layout/quiz_categories_item" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/continue_quiz_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical"
                    android:weightSum="10"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:gravity="start|center"
                        android:text="@string/continue_quiz"
                        android:textColor="@color/black"
                        android:textSize="24dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="8"
                        tools:listitem="@layout/continue_quiz_item" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>