<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/img"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/companion" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:weightSum="10"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical"
                    android:layout_weight="7">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:weightSum="10"
                        android:layout_weight="7">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:weightSum="10"
                            android:layout_weight="7">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_gravity="center"
                                android:layout_weight="3"
                                android:layout_marginStart="5dp"
                                android:gravity="start|center"
                                android:text="@string/quiz_categories"
                                android:textColor="@color/app_bg_light"
                                android:textSize="18dp" />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:orientation="horizontal"
                                android:weightSum="10"
                                android:layout_weight="3.5">
                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_weight="1.5"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:contentDescription="@string/app_name"
                                    android:src="@drawable/question" />
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_weight="7"
                                    android:layout_marginStart="5dp"
                                    android:gravity="start|center"
                                    android:text="@string/ten_question"
                                    android:textColor="@color/text_color"
                                    android:textSize="15dp" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:orientation="horizontal"
                                android:weightSum="10"
                                android:layout_weight="3.5">
                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_weight="1.5"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:contentDescription="@string/app_name"
                                    android:src="@drawable/time" />
                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:layout_weight="7"
                                    android:gravity="start|center"
                                    android:layout_marginStart="5dp"
                                    android:text="@string/question_time"
                                    android:textColor="@color/text_color"
                                    android:textSize="15dp" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="10"
                            android:layout_weight="3">
                            <ImageView
                                android:layout_width="0dp"
                                android:layout_weight="10"
                                android:layout_height="35dp"
                                android:layout_marginTop="10dp"
                                android:layout_gravity="top|end"

                                android:contentDescription="@string/app_name"
                                android:src="@drawable/delete_icon" />

                        </LinearLayout>
                    </LinearLayout>
                    <Button
                        android:id="@+id/continue_quiz_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:layout_margin="2dp"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/white"
                        android:background="@drawable/continue_btn"
                        android:text="@string/continue_quiz" />
                </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>
