<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewCategory"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/quiz_categories"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="top|center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:gravity="start|center"
                android:text="@string/quiz_categories"
                android:textColor="@color/app_bg_light"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/category_img"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/rounded_corners"
                    android:contentDescription="@string/app_name"
                    android:elevation="4dp"
                    android:padding="18dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/companion" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:orientation="vertical"
                        android:weightSum="12">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:orientation="horizontal"
                            android:weightSum="10">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="1.5"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/question" />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="8.5"
                                android:orientation="vertical"
                                android:weightSum="10">

                                <TextView
                                    android:id="@+id/num_quiz"
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="5"
                                    android:gravity="start"
                                    android:text="@string/question_time"
                                    android:textColor="@color/bg_round_color"
                                    android:textSize="15dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="5"
                                    android:gravity="start"
                                    android:text="Questions"
                                    android:textColor="@color/text_color"
                                    android:textSize="15dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:orientation="horizontal"
                            android:weightSum="10">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="1.5"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/question" />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="8.5"
                                android:orientation="vertical"
                                android:weightSum="10">

                                <TextView
                                    android:id="@+id/contain_num_quiz"
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="5"
                                    android:gravity="start"
                                    android:text="@string/question_time"
                                    android:textColor="@color/bg_round_color"
                                    android:textSize="15dp"
                                    android:textStyle="bold" />

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="5"
                                    android:gravity="start"
                                    android:text="Score "
                                    android:textColor="@color/text_color"
                                    android:textSize="15dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:orientation="horizontal"
                            android:weightSum="10">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:layout_weight="1.5"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/time" />
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="8.5"
                                android:orientation="vertical"
                                android:weightSum="10">

                                <TextView
                                    android:id="@+id/timeTaken"
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="5"
                                    android:gravity="start"
                                    android:text="@string/question_time"
                                    android:textColor="@color/bg_round_color"
                                    android:textSize="15dp"
                                    android:textStyle="bold" />

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="5"
                                    android:gravity="start"
                                    android:text="Time Taken"
                                    android:textColor="@color/text_color"
                                    android:textSize="15dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>
